name:                gsoc2015
version:             0.1.0.0
author:              Michael Smith
maintainer:          michael@diglumi.com
build-type:          Simple
cabal-version:       >=1.10

executable gsoc
  main-is:             Frontend.hs
  build-depends:       base, gsoc2015, ghc, ghc-paths, syb, template-haskell,
                       containers, unordered-containers, hashable, mtl
  default-language:    Haskell2010

library
  exposed-modules:     Quasi, Parser, RType, Split, Fixpoint, Util, Force, Syn,
                       TyUnify
  build-depends:       base, ghc, ghc-paths, mtl, containers,
                       unordered-containers, utf8-string, template-haskell,
                       parsers, trifecta, pretty, GenericPretty, ansi-wl-pprint
  hs-source-dirs:      src
  default-language:    Haskell2010

