name:                  liquidhaskell-core
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     Language.Haskell.Liquid.Fixpoint, 
                       Language.Haskell.Liquid.Parser,
                       Language.Haskell.Liquid.RType
  build-depends:       base,
                       GenericPretty,
                       mtl,
                       parsec,
                       pretty,
                       template-haskell,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

