name:                  liquidhaskell-frontend
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

executable liquidhaskell
  main-is:             Main.hs
  build-depends:       base,
                       containers,
                       GenericPretty,
                       ghc,
                       ghc-paths,
                       liquidhaskell-core,
                       liquidhaskell-frontend,
                       liquidhaskell-ghc,
                       pretty,
                       syb,
                       template-haskell
  default-language:    Haskell2010

library
  exposed:             False
  exposed-modules:     Language.Haskell.Liquid.Quasi,
                       Language.Haskell.Liquid.Quasi.Metadata
  other-modules:       Language.Haskell.Liquid.Quasi.Annotate,
                       Language.Haskell.Liquid.Quasi.Backdoor
  build-depends:       base, 
                       ghc,
                       liquidhaskell-core,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

