name:                  liquidhaskell-frontend
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

executable liquidhaskell
  main-is:             Main.hs
  build-depends:       base,
                       containers,
                       GenericPretty,
                       ghc,
                       ghc-paths,
                       liquidhaskell-ghc,
                       pretty,
                       syb,
                       template-haskell
  default-language:    Haskell2010

