name:                  liquidhaskell-ghc
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     Language.Haskell.Liquid.Expand,
                       Language.Haskell.Liquid.SpecType,
                       Language.Haskell.Liquid.Resolve,
                       Language.Haskell.Liquid.Subst
  build-depends:       base,
                       GenericPretty,
                       ghc,
                       liquidhaskell-core,
                       mtl,
                       pretty,
                       template-haskell,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

