name:                  liquidhaskell-ghc
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     Language.Haskell.Liquid.Extract,
                       Language.Haskell.Liquid.Reify,
                       Language.Haskell.Liquid.Types,
                       Language.Haskell.Liquid.WiredIns
  build-depends:       base,
                       GenericPretty,
                       ghc,
                       liquid-fixpoint,
                       liquidhaskell-lang,
                       mtl,
                       parsec,
                       pretty,
                       template-haskell,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

