name:                  liquidhaskell-lang
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     LiquidHaskell
  build-depends:       base, 
                       liquidhaskell-core,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

