name:                  liquidhaskell-lang
version:               0.1.0.0
author:                Michael Smith
maintainer:            michael@diglumi.com
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     LiquidHaskell
  other-modules:       Language.Haskell.Liquid.Build,
                       Language.Haskell.Liquid.Parse,
                       Language.Haskell.Liquid.RType,
                       Language.Haskell.Liquid.Util
  build-depends:       base, 
                       mtl,
                       parsec,
                       template-haskell,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

